<resources>
    <string name="app_name">EasySoccer</string>
    <string name="title_activity_navigator_admin">NavigatorAdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_stadiums">Canchas</string>
    <string name="tittle_reserve_admin">Reservas</string>
    <string name="register_admin">Registro de Administradores</string>
    <string name="register_user">Registro de usuario</string>
    <string name="init_sesion">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="canchasalclick">Easy Soccer</string>
    <string name="fragment_reserve_user">Reservas Realizadas</string>
    <string name="fragment_in_your_area">Home Usuario</string>
    <string name="identification">Identificacion</string>
    <string name="name_user">Nombre</string>
    <string name="hello_name_user">Hola </string>
</resources>