<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wilman.easysoccer.ui.homeAdmin.HomeAdminFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_admin" />

    <fragment
        android:id="@+id/navigation_stadiums"
        android:name="com.wilman.easysoccer.ui.stadiums.StadiumsFragment"
        android:label="@string/title_stadiums"
        tools:layout="@layout/fragment_stadiums" />

    <fragment
        android:id="@+id/navigation_reserve_admin"
        android:name="com.wilman.easysoccer.ui.reserve.ReserveAdminFragment"
        android:label="@string/tittle_reserve_admin"
        tools:layout="@layout/fragment_reserve_admin" />
</navigation>