<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registros">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#702FF321"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txv_name_type_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/register_admin" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="102dp"
        android:layout_height="96dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Imagen"
        app:layout_constraintBottom_toBottomOf="@+id/imageUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageUser"
        app:layout_constraintTop_toTopOf="@+id/imageUser" />

    <TextView
        android:id="@+id/txv_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_user"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageUser" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_nameUser"
        android:layout_width="205dp"
        android:layout_height="27dp"
        android:background="#FFFFFF"
        android:hint=""
        app:layout_constraintBottom_toBottomOf="@+id/txv_name_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toEndOf="@+id/txv_name_user"
        app:layout_constraintTop_toTopOf="@+id/txv_name_user"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Celular"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_name_user" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_phone_number"
        android:layout_width="205dp"
        android:layout_height="27dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:hint=""
        app:layout_constraintBottom_toBottomOf="@+id/txv_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/edt_nameUser"
        app:layout_constraintStart_toStartOf="@+id/edt_nameUser"
        app:layout_constraintTop_toTopOf="@+id/txv_phone_number" />

    <TextView
        android:id="@+id/txv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E-mail"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_phone_number" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_email_user"
        android:layout_width="205dp"
        android:layout_height="27dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:hint=""
        app:layout_constraintBottom_toBottomOf="@+id/txv_email"
        app:layout_constraintEnd_toEndOf="@+id/edt_phone_number"
        app:layout_constraintStart_toStartOf="@+id/edt_phone_number"
        app:layout_constraintTop_toTopOf="@+id/txv_email" />

    <TextView
        android:id="@+id/txv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usuario"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_user_name"
        android:layout_width="205dp"
        android:layout_height="27dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:hint=""
        app:layout_constraintBottom_toBottomOf="@+id/txv_user"
        app:layout_constraintEnd_toEndOf="@+id/edt_email_user"
        app:layout_constraintStart_toStartOf="@+id/edt_email_user"
        app:layout_constraintTop_toTopOf="@+id/txv_user" />

    <TextView
        android:id="@+id/txv_id_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identification"
        android:textColor="@color/white"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_xlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_user" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_id_admin"
        android:layout_width="205dp"
        android:layout_height="27dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:hint=""
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/txv_id_admin"
        app:layout_constraintEnd_toEndOf="@+id/edt_user_name"
        app:layout_constraintStart_toStartOf="@+id/edt_user_name"
        app:layout_constraintTop_toTopOf="@+id/txv_id_admin" />

    <TextView
        android:id="@+id/txv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="Contraseña"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_id_admin" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password_user"
        android:layout_width="206dp"
        android:layout_height="27dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:hint=""
        app:layout_constraintBottom_toBottomOf="@+id/txv_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_id_admin"
        app:layout_constraintStart_toStartOf="@+id/edt_id_admin"
        app:layout_constraintTop_toTopOf="@+id/txv_password" />

    <TextView
        android:id="@+id/txv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edad"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_age_user"
        android:layout_width="206dp"
        android:layout_height="27dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:hint=""
        app:layout_constraintBottom_toBottomOf="@+id/txv_age"
        app:layout_constraintEnd_toEndOf="@+id/edt_password_user"
        app:layout_constraintStart_toStartOf="@+id/edt_password_user"
        app:layout_constraintTop_toTopOf="@+id/txv_age" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_age"
        android:layout_marginTop="@dimen/margin_medium">

        <Button
            android:id="@+id/btn_register_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrar"
            android:layout_marginEnd="@dimen/margin_medium"/>

        <Button
            android:id="@+id/btn_cancel_register_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancelar"
            android:layout_marginStart="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.appcompat.widget.LinearLayoutCompat>







</androidx.constraintlayout.widget.ConstraintLayout>